# sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: compiler_warnings.cmake  standard_project_settings.cmake  static_analyzers.cmake
src/: black_hole.cpp  compile_time_stuff.cpp  fmt_test.cpp  number_theory.cpp  rsa.cpp  temp.cpp  temp.hpp
